ยัง generate ไม่ถูกแต่ใกล้เคียงแล้ว เข้าใกล้ไปอีกขั้น